// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal render correctly 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="ant-scrolling-effect"
      style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
    >
      <div>
        <div
          class="dcloud-modal-root"
        >
          <div
            class="dcloud-modal-mask dcloud-fade-appear dcloud-fade-appear-start dcloud-fade"
          />
          <div
            class="dcloud-modal-wrap"
            role="dialog"
            tabindex="-1"
          >
            <div
              class="dcloud-modal dcloud-zoom-appear dcloud-zoom-appear-prepare dcloud-zoom"
              role="document"
              style="width: 520px;"
            >
              <div
                aria-hidden="true"
                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                tabindex="0"
              />
              <div
                class="dcloud-modal-content"
              >
                <button
                  aria-label="Close"
                  class="dcloud-modal-close"
                  type="button"
                >
                  <span
                    class="dcloud-modal-close-x"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close dcloud-modal-close-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <div
                  class="dcloud-modal-body"
                >
                  Here is content of Modal
                </div>
                <div
                  class="dcloud-modal-footer"
                >
                  <button
                    class="dcloud-btn"
                    type="button"
                  >
                    <span>
                      Cancel
                    </span>
                  </button>
                  <button
                    class="dcloud-btn dcloud-btn-primary"
                    type="button"
                  >
                    <span>
                      OK
                    </span>
                  </button>
                </div>
              </div>
              <div
                aria-hidden="true"
                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Modal render without footer 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="ant-scrolling-effect"
      style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
    >
      <div>
        <div
          class="dcloud-modal-root"
        >
          <div
            class="dcloud-modal-mask dcloud-fade-appear dcloud-fade-appear-start dcloud-fade"
          />
          <div
            class="dcloud-modal-wrap"
            role="dialog"
            tabindex="-1"
          >
            <div
              class="dcloud-modal dcloud-zoom-appear dcloud-zoom-appear-prepare dcloud-zoom"
              role="document"
              style="width: 520px;"
            >
              <div
                aria-hidden="true"
                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                tabindex="0"
              />
              <div
                class="dcloud-modal-content"
              >
                <button
                  aria-label="Close"
                  class="dcloud-modal-close"
                  type="button"
                >
                  <span
                    class="dcloud-modal-close-x"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close dcloud-modal-close-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <div
                  class="dcloud-modal-body"
                >
                  Here is content of Modal
                </div>
              </div>
              <div
                aria-hidden="true"
                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Modal rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": Document {
    "children": Array [],
    "endIndex": null,
    "next": null,
    "parent": null,
    "prev": null,
    "startIndex": null,
    "type": "root",
  },
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Modal support closeIcon 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-modal-root"
  >
    <div
      class="dcloud-modal-mask dcloud-fade-appear dcloud-fade-appear-start dcloud-fade"
    />
    <div
      class="dcloud-modal-wrap"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="dcloud-modal dcloud-zoom-appear dcloud-zoom-appear-prepare dcloud-zoom"
        role="document"
        style="width: 520px;"
      >
        <div
          aria-hidden="true"
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
        <div
          class="dcloud-modal-content"
        >
          <button
            aria-label="Close"
            class="dcloud-modal-close"
            type="button"
          >
            <span
              class="dcloud-modal-close-x"
            >
              <a>
                closeIcon
              </a>
            </span>
          </button>
          <div
            class="dcloud-modal-body"
          />
          <div
            class="dcloud-modal-footer"
          >
            <button
              class="dcloud-btn"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="dcloud-btn dcloud-btn-primary"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
        <div
          aria-hidden="true"
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
